[Swagger] add IsInvolvedIn, Offers, RelatedTo
