# other/api/swagger.yaml
@@ -12,44 +12,50 @@ info:
 host: "localhost:8080"
 basePath: "/v2"
 tags:
-  - name: "activity"
-    description: "Activity offered by the association"
-  - name: "contact"
-    description: "Contact of Person or Farm"
-  - name: "event"
-    description: "Event organized by the association"
-  - name: "FAQ"
-    description: "FAQ asked by users"
-  - name: "farm"
-    description: "Farm involved in the association"
-  - name: "helpUsForm"
-    description: "From sent to contact the association"
-  - name: "person"
-    description: "Person of the volontariato"
+- name: "activity"
+  description: "Activity offered by the association"
+- name: "contact"
+  description: "Contact of Person or Farm"
+- name: "event"
+  description: "Event organized by the association"
+- name: "FAQ"
+  description: "FAQ asked by users"
+- name: "farm"
+  description: "Farm involved in the association"
+- name: "helpUsForm"
+  description: "From sent to contact the association"
+- name: "isInvolvedIn"
+  description: "Relationship between person and activity"
+- name: "offers"
+  description: "Realtionship between farm and activity"
+- name: "person"
+  description: "Person of the volontariato"
+- name: "relatedTo"
+  description: "Realationship between event and activity"
 schemes:
-  - "http"
+- "http"
 paths:
   /activities:
     get:
       tags:
-        - "activity"
+      - "activity"
       summary: "Activities of the association"
       description: "List of activities offered by association"
       operationId: "activityGET"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "offset"
-          in: "query"
-          description: "Pagination offset. Default is 0."
-          required: false
-          type: "integer"
-        - name: "limit"
-          in: "query"
-          description: "Maximum number of items per page. Default is 20 and cannot exceed\
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
           \ 500."
-          required: false
-          type: "integer"
+        required: false
+        type: "integer"
       responses:
         "200":
           description: "A collection of Activities"
@@ -63,19 +69,19 @@ paths:
   /activities/findById/{activityId}:
     get:
       tags:
-        - "activity"
+      - "activity"
       summary: "Find activity by ID"
       description: "Returns an activity"
       operationId: "getActivityById"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "activityId"
-          in: "path"
-          description: "ID of activity to return"
-          required: true
-          type: "integer"
-          format: "int64"
+      - name: "activityId"
+        in: "path"
+        description: "ID of activity to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
@@ -89,18 +95,18 @@ paths:
   /activities/findByName/{activityName}:
     get:
       tags:
-        - "activity"
+      - "activity"
       summary: "Find activity by Name"
       description: "Returns the activities with a specific name"
       operationId: "getActivityByName"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "activityName"
-          in: "path"
-          description: "Name of the activities to return"
-          required: true
-          type: "string"
+      - name: "activityName"
+        in: "path"
+        description: "Name of the activities to return"
+        required: true
+        type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -114,19 +120,19 @@ paths:
   /contacts/findById/{contactId}:
     get:
       tags:
-        - "contact"
+      - "contact"
       summary: "Find contact by ID"
       description: "Returns a contact"
       operationId: "getContactById"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "contactId"
-          in: "path"
-          description: "ID of contact to return"
-          required: true
-          type: "integer"
-          format: "int64"
+      - name: "contactId"
+        in: "path"
+        description: "ID of contact to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
@@ -140,24 +146,24 @@ paths:
   /events:
     get:
       tags:
-        - "event"
+      - "event"
       summary: "Events organized by the association"
       description: "List of events of the association"
       operationId: "eventsGET"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "offset"
-          in: "query"
-          description: "Pagination offset. Default is 0."
-          required: false
-          type: "integer"
-        - name: "limit"
-          in: "query"
-          description: "Maximum number of items per page. Default is 20 and cannot exceed\
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
           \ 500."
-          required: false
-          type: "integer"
+        required: false
+        type: "integer"
       responses:
         "200":
           description: "A collection of Events"
@@ -171,19 +177,19 @@ paths:
   /events/findById/{eventId}:
     get:
       tags:
-        - "event"
+      - "event"
       summary: "Find event by ID"
       description: "Returns an event"
       operationId: "getEventById"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "eventId"
-          in: "path"
-          description: "ID of event to return"
-          required: true
-          type: "integer"
-          format: "int64"
+      - name: "eventId"
+        in: "path"
+        description: "ID of event to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
@@ -197,18 +203,18 @@ paths:
   /events/findByName/{eventName}:
     get:
       tags:
-        - "event"
+      - "event"
       summary: "Find evens by name"
       description: "Returns events with a specific name"
       operationId: "getEventByName"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "eventName"
-          in: "path"
-          description: "Name of events to return"
-          required: true
-          type: "string"
+      - name: "eventName"
+        in: "path"
+        description: "Name of events to return"
+        required: true
+        type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -222,24 +228,24 @@ paths:
   /faq:
     get:
       tags:
-        - "FAQ"
+      - "FAQ"
       summary: "FAQs of the Association"
       description: "List of Frequent Asked Questions"
       operationId: "faqGET"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "offset"
-          in: "query"
-          description: "Pagination offset. Default is 0."
-          required: false
-          type: "integer"
-        - name: "limit"
-          in: "query"
-          description: "Maximum number of items per page. Default is 20 and cannot exceed\
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
           \ 500."
-          required: false
-          type: "integer"
+        required: false
+        type: "integer"
       responses:
         "200":
           description: "A collection of FAQ"
@@ -253,24 +259,24 @@ paths:
   /farms:
     get:
       tags:
-        - "farm"
+      - "farm"
       summary: "Farm enrolled in the association"
       description: "List of farms in the association"
       operationId: "farmsGET"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "offset"
-          in: "query"
-          description: "Pagination offset. Default is 0."
-          required: false
-          type: "integer"
-        - name: "limit"
-          in: "query"
-          description: "Maximum number of items per page. Default is 20 and cannot exceed\
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
           \ 500."
-          required: false
-          type: "integer"
+        required: false
+        type: "integer"
       responses:
         "200":
           description: "A collection of Farms"
@@ -284,19 +290,19 @@ paths:
   /farms/findById/{farmId}:
     get:
       tags:
-        - "farm"
+      - "farm"
       summary: "Find farm by ID"
       description: "Returns a farm"
       operationId: "getFarmById"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "farmId"
-          in: "path"
-          description: "ID of farm to return"
-          required: true
-          type: "integer"
-          format: "int64"
+      - name: "farmId"
+        in: "path"
+        description: "ID of farm to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
@@ -310,18 +316,18 @@ paths:
   /farms/findByName/{farmName}:
     get:
       tags:
-        - "farm"
+      - "farm"
       summary: "Find farms by name"
       description: "Return farms with the specified name"
       operationId: "getFarmByName"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "farmName"
-          in: "path"
-          description: "Name of farms to return"
-          required: true
-          type: "string"
+      - name: "farmName"
+        in: "path"
+        description: "Name of farms to return"
+        required: true
+        type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -335,21 +341,21 @@ paths:
   /helpUsForm/sendForm:
     post:
       tags:
-        - "helpUsForm"
+      - "helpUsForm"
       summary: "HelpUs form"
       description: "Send a form to be recontacted"
       operationId: "helpUsFormPOST"
       consumes:
-        - "application/json"
+      - "application/json"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - in: "body"
-          name: "helpUsform"
-          description: "the form to insert"
-          required: false
-          schema:
-            $ref: "#/definitions/HelpUsForm"
+      - in: "body"
+        name: "helpUsform"
+        description: "the form to insert"
+        required: false
+        schema:
+          $ref: "#/definitions/HelpUsForm"
       responses:
         "201":
           description: "OK"
@@ -358,22 +364,74 @@ paths:
         "404":
           description: "unauthorized"
       x-swagger-router-controller: "HelpUsForm"
+  /isInvolvedIn/findInvolvedPeople/{activityId}:
+    get:
+      tags:
+      - "isInvolvedIn"
+      summary: "Find all people involved in a specific activity"
+      description: "Returns a list of people"
+      operationId: "getPeopleByActivityId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "activityId"
+        in: "path"
+        description: "ID of the considered activity"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/IsInvolvedIn"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Activity not found"
+      x-swagger-router-controller: "IsInvolvedIn"
+  /offers/findInterestedFarms/{activityId}:
+    get:
+      tags:
+      - "offers"
+      summary: "Find all farms interested by a specific activity"
+      description: "Returns a list of farms"
+      operationId: "getFarmsByActivityId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "activityId"
+        in: "path"
+        description: "ID of the considered activity"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Offers"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Activity not found"
+      x-swagger-router-controller: "Offers"
   /people/findById/{personId}:
     get:
       tags:
-        - "person"
+      - "person"
       summary: "Find person by ID"
       description: "Returns a person"
       operationId: "getPersonById"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "personId"
-          in: "path"
-          description: "ID of person to return"
-          required: true
-          type: "integer"
-          format: "int64"
+      - name: "personId"
+        in: "path"
+        description: "ID of person to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
@@ -387,22 +445,22 @@ paths:
   /people/findByRole/{personRole}:
     get:
       tags:
-        - "person"
+      - "person"
       summary: "Find people by role"
       description: "Returns all people with a specific role"
       operationId: "getPersonByRole"
       produces:
-        - "application/json"
+      - "application/json"
       parameters:
-        - name: "personRole"
-          in: "path"
-          description: "Role of people to return"
-          required: true
-          type: "string"
-          enum:
-            - "Founder"
-            - "Expert"
-            - "Volunteer"
+      - name: "personRole"
+        in: "path"
+        description: "Role of people to return"
+        required: true
+        type: "string"
+        enum:
+        - "Founder"
+        - "Expert"
+        - "Volunteer"
       responses:
         "200":
           description: "successful operation"
@@ -413,6 +471,32 @@ paths:
         "404":
           description: "Person not found"
       x-swagger-router-controller: "Person"
+  /relatedTo/findRelatedEvents/{activityId}:
+    get:
+      tags:
+      - "relatedTo"
+      summary: "Find all events related to a specific activity"
+      description: "Returns a list of events"
+      operationId: "getEventsByActivityId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "activityId"
+        in: "path"
+        description: "ID of the considered activity"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/RelatedTo"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Activity not found"
+      x-swagger-router-controller: "RelatedTo"
 definitions:
   Activity:
     type: "object"
@@ -538,8 +622,6 @@ definitions:
   HelpUsForm:
     type: "object"
     properties:
-      id:
-        type: "integer"
       name:
         type: "string"
       surname:
@@ -571,6 +653,30 @@ definitions:
       phoneNumber: "1234567"
       email: "davide.siciliano"
       skills: "some skills"
+  IsInvolvedIn:
+    type: "object"
+    properties:
+      personId:
+        type: "integer"
+        format: "int64"
+      activityId:
+        type: "integer"
+        format: "int64"
+    example:
+      personId: 6
+      activityId: 3
+  Offers:
+    type: "object"
+    properties:
+      farmId:
+        type: "integer"
+        format: "int64"
+      activityId:
+        type: "integer"
+        format: "int64"
+    example:
+      farmId: 2
+      activityId: 3
   Person:
     type: "object"
     properties:
@@ -585,9 +691,9 @@ definitions:
         type: "string"
         description: "role of the person in the association"
         enum:
-          - "Founder"
-          - "Expert"
-          - "Volunteer"
+        - "Founder"
+        - "Expert"
+        - "Volunteer"
       description:
         type: "string"
       personImg:
@@ -604,6 +710,18 @@ definitions:
       role: "Founder"
       personImg: "Img0"
       contactId: 0
+  RelatedTo:
+    type: "object"
+    properties:
+      eventId:
+        type: "integer"
+        format: "int64"
+      activityId:
+        type: "integer"
+        format: "int64"
+    example:
+      personId: 6
+      activityId: 3
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
